--- a/style/header.css
+++ b/style/header.css
@@ -8,7 +8,7 @@ header {
 }
 
 #primary {
-  justify-content: center;
+  justify-items: center;
   text-align: center;
   height: 327px;
   width: 680px;
