estilizando a seção aside

--- a/style/section.css
+++ b/style/section.css
@@ -3,6 +3,27 @@
   padding-bottom: 120px;
 }
 
+#my-services {
+  padding-inline: 120px;
+  padding-block: 88px 120px;
+  text-align: center;
+
+  #services {
+    margin-top: 56px;
+
+    img {
+      margin-bottom: 20px;
+    }
+
+    & > div {
+      border: 1px solid var(--gray-400);
+      border-radius: 12px;
+      padding: 20px;
+      justify-items: start;
+    }
+  }
+}
+
 .card {
   background-color: var(--gray-400);
   border: 1px solid var(--gray-400);
