--- a/style/global.css
+++ b/style/global.css
@@ -52,6 +52,11 @@ main {
   text-align: center;
 }
 
+aside {
+ background-color: var(--gray-600);
+}
+
+
 .container {
   max-width: 1280px;
   margin-inline: auto;
